<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContentActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/label_onsenName"/>

        <TextView
            android:id="@+id/text_onsenName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/label_onsenAddress"/>

        <TextView
            android:id="@+id/text_onsenAddress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/label_natureOfOnsen"/>

       <TextView
            android:id="@+id/text_natureOfOnsen"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/label_onsenAreaNameOnsenAreaURL"/>

        <TextView
            android:id="@+id/text_onsenAreaNameOnsenAreaURL"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:maxLines="4"
            android:minLines="4"/>
    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/label_onsenAreaCaption"/>

        <TextView
            android:id="@+id/text_onsenAreaCaption"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="15"
            android:minLines="15"
            android:scrollHorizontally="true"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_button" />

</LinearLayout>